# iloveair

./: Cargo.toml  Makefile  README.md  dryrun.sh  local_weather.py  read_waveplus.py  requirements.txt  run.sh  weather_notify.py
getweather/: Cargo.toml
python/: notion_notify.py  read_waveplus.py  requirements.txt  save_rain_data.py  util.py  weather_notify.py  xml_util.py
src/: airthings_radon.rs  config.rs  lib.rs  notify.rs  pretty.rs  sensordata.rs  weather.rs
