[package]
name = "iloveair"
version = "0.1.0"
edition = "2021"

[lib]
name = "iloveair"
path = "src/lib.rs" # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "getweather"
path = "bin/getweather.rs"

[[bin]]
name = "weather_notify"
path = "bin/weather_notify.rs"

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
anyhow = "1.0.70"
