[package]
name = "iloveair"
version = "0.1.0"
edition = "2021"

[lib]
name = "iloveair"
path = "src/lib.rs" # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "getweather"
path = "bin/getweather.rs"

[[bin]]
name = "weather_notify"
path = "bin/weather_notify.rs"

[[bin]]
name = "getpollution"
path = "bin/getpollution.rs"

[[bin]]
name = "read_waveplus"
path = "bin/read_waveplus.rs"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
anyhow = "1.0.75"
chrono = { version = "0.4.26", features = ["serde"] }
futures = { version = "0.3.28", optional = true }
tokio = { version = "1.32.0", features = ["macros", "rt", "signal"] }
tokio-stream = { version = "0.1.14", optional = true }
clap = { version = "4.4.2", features = ["cargo"] }
